--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <html lang="es">
 <head>
+    <meta name="google-site-verification" content="RlqbAr1p4fYtfziCKrd8uYO3d8hhdWLLnK7yyTcwemM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina</title>
