--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="description" conten=" ">
+    <meta name="description" conten="¡Bienvenidos a TASTY FOOD! Tu destino para sabores deliciosos, entregados directamente a tu puerta. Desde tus restaurantes favoritos hasta platos caseros recién preparados, estamos aquí para satisfacer tus antojos con la máxima comodidad. Ordena ahora y disfruta de una experiencia culinaria sin complicaciones desde la comodidad de tu hogar">
 </head>
 <body>
 
