--- a/index.html
+++ b/index.html
@@ -3,21 +3,41 @@
 
 <html lang="es">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-980GW0TC8M"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-980GW0TC8M');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+
+    <meta property="og:site_name" content="TASTY FOOD">
+    <meta property="og:title" content="TASTY FOOD">
+    <meta property="og:description" content="Lo último en comida a domicilio se llama Tasty food, 
+    una carta con hasta 9 apartados y una variedad de platos que abarca todos 
+    los gustos, a precios razonables. Es el delivery del chef">
+    <meta property="og:type" content="shopping">
+    <meta property="og:url" content="https://brayanleiva.github.io/">
+    <meta property="og:img" content="https://github.com/BrayanLeiva/BrayanLeiva.github.io/blob/main/imagenes/bg1.jpg"> 
 </head>
 <body>
+
+    <section id="ads">
+        <div class="ads1"> 
+            <div class="cerrar-ads">
+                <img src="imagenes/x.svg" alt="">
+            </div>
+            <a href="">
+                <img src="imagenes/PUBLI.png" alt="">
+            </a>
+        </div>
+        <div class="ads2">
+            <a href="">
+                <img src="imagenes/PUBLI.png" alt="">
+            </a>
+        </div>
+
+    </section>    
+
 
    <header class="header">
  
