--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <html lang="es">
 <head>
+    <img src="https://tracker.metricool.com/c3po.jpg?hash=9909ad2e6b35ebd15b8bb285cf765dea"/>
+
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina</title>
